<resources>
    <string name="app_name">Chart Bills</string>
    <string name="action_settings">Settings</string>
    <string name="action_date">Date Filter</string>
    <string name="due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="content_desc_back">Back</string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount</string>
    <string name="red_button">Red Button</string>
    <string name="grey_button">Grey Button</string>
    <string name="upcoming_hyphen">-</string>
    <string name="upcoming_memo">Upcoming Memo</string>
    <string name="pref_key_notification">pref_key_notify</string>
    <string name="app_fb_page_link">http://www.facebook.com/thefinapp</string>
    <string name="pref_set_reminder_time">pref_key_set_time</string>
    <string name="pref_key_week_start">pref_key_week_start</string>
    <string name="pref_week_start_default">MONDAY</string>
    <string name="pref_currency_default">$</string>
    <string name="pref_key_currency">pref_key_currency</string>
    <string name="pref_backup">pref_backup</string>
    <string name="pref_reminder_time">pref_key_reminder_time</string>
    <string name="pref_time_reminder_default">08:00</string>
    <string name="ad_id_banner">ca-app-pub-7164033483674077/1201302248</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="paid">Paid</string>
    <string name="error_text">No Bill Created yet \n Tap the plus icon to add a new Bill \n OR \nRestore from Google Drive if \n you made backup</string>

    <string-array name="pref_week_start_titles">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="pref_week_start_values">
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>

    <string-array name="pref_currency_titles">
        <item>Dollars</item>
        <item>Pounds Sterling</item>
        <item>Euro</item>
        <item>Yen</item>
        <item>Franc</item>
        <item>Rupees</item>
    </string-array>

    <string-array name="pref_currency_values">
        <item>$</item>
        <item>£</item>
        <item>€</item>
        <item>¥</item>
        <item>₣</item>
        <item>Rs</item>
    </string-array>

    <string-array name="pref_currency_values_new">
        <item>$</item>
        <item>$MN</item>
        <item>د.ب.</item>
        <item>£</item>
        <item>¥</item>
        <item>₱</item>
        <item>₣</item>
        <item>₭</item>
        <item>₦</item>
        <item>₨</item>
        <item>₩</item>
        <item>₮</item>
        <item>฿</item>
        <item>₡</item>
        <item>₪</item>
        <item>₫</item>
        <item>Ar</item>
        <item>B</item>
        <item>B$</item>
        <item>BBD</item>
        <item>BCEAO</item>
        <item>BD$</item>
        <item>BEAC</item>
        <item>Br</item>
        <item>Bs</item>
        <item>BZ$</item>
        <item>C$</item>
        <item>CUC$</item>
        <item>D</item>
        <item>Db</item>
        <item>din</item>
        <item>EC$</item>
        <item>Esc</item>
        <item>F</item>
        <item>ƒ</item>
        <item>FBu</item>
        <item>Fdj</item>
        <item>FG</item>
        <item>FJ$</item>
        <item>Ft</item>
        <item>GHS</item>
        <item>GY$</item>
        <item>JOD</item>
        <item>K</item>
        <item> KGS</item>
        <item> KHR</item>
        <item> KM</item>
        <item> KMF</item>
        <item> kn</item>
        <item> kr</item>
        <item> KSh</item>
        <item> KZT</item>
        <item> L</item>
        <item>L$</item>
        <item>LD</item>
        <item>Le</item>
        <item>MDL</item>
        <item>MK</item>
        <item>MKD</item>
        <item>MT</item>
        <item>N$</item>
        <item>NAƒ</item>
        <item>NT$</item>
        <item>Nu.</item>
        <item>P</item>
        <item>Q</item>
        <item>R$</item>
        <item>RD$</item>
        <item>Rf</item>
        <item>RF</item>
        <item>RM</item>
        <item>Rp</item>
        <item>Rs.</item>
        <item>S/.</item>
        <item>SDG</item>
        <item>SDR</item>
        <item>SI$</item>
        <item>So.</item>
        <item>SR</item>
        <item>SSP</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>T</item>
        <item>T$</item>
        <item>Tk</item>
        <item>TTD</item>
        <item>UF</item>
        <item>UM</item>
        <item>USh</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>Vt</item>
        <item>WS$</item>
        <item>x</item>
        <item>YER</item>
        <item>ZK</item>
        <item>лв</item>
        <item>р</item>
        <item>с.</item>
        <item>Դ</item>
        <item>    ج.م</item>
        <item>    د.ا</item>ٕ
        <item>    د.ت</item>
        <item>    د.ك</item>
        <item>    د.م.</item>
        <item>    دج</item>
        <item>    ر.س</item>
        <item>    ر.ع.</item>
        <item>    ر.ق</item>
        <item>        ع.د    </item>
        <item>    ل.ل</item>
        <item> ரூ</item>
    </string-array>
    <!--


        ናቕፋ
    -->


</resources>
