<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="-2dp"
    android:layout_marginStart="-2dp"
    android:layout_marginTop="5dp"
    android:paddingBottom="0dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="0.5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvPaidDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:textColor="@color/my_gray"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPaidDescription"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPaidAmount"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPaidDesc" />

        <ImageView
            android:layout_width="30dp"
            app:srcCompat="@drawable/green_button"
            android:id="@+id/ivGreenButton"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="24dp"
            android:contentDescription="@string/grey_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPaidDescription" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_repeat_recyc"
            android:id="@+id/ivRecyclerRepeat"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/repeat"
            app:layout_constraintTop_toBottomOf="@+id/tvPaidAmount"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:srcCompat="@drawable/ic_description_black_recyc"
            android:id="@+id/ivRecyclerMemo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivRecyclerRepeat"
            android:layout_marginStart="24dp"
            app:layout_constraintLeft_toRightOf="@+id/ivRecyclerRepeat"
            android:layout_marginLeft="24dp"
            android:contentDescription="@string/upcoming_memo" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tvPaidDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="gone"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:text="Paid"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textColor="@color/green_button_color"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvPaidCount"
                android:text="()"
                android:layout_marginStart="10dp"
                android:textColor="@color/green_button_color"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/tvPaidTotalPrice"
                android:text="$650"
                android:textColor="@color/green_button_color"
                android:layout_gravity="end"
                android:gravity="right"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>