<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ivBack"
            android:layout_width="36dp"
            android:contentDescription="@string/content_desc_back"
            android:layout_gravity="start"
            android:layout_height="36dp"
            android:background="@color/colorPrimary"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>
    </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:contentDescription="@string/delete"
            android:layout_gravity="start"
            android:foregroundGravity="left"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:visibility="gone"
            android:src="@drawable/ic_delete_black_24dp"/>
</LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="end"
            android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/ivDone"
            android:layout_width="36dp"
            android:contentDescription="@string/done"
            android:layout_gravity="end"
            android:foregroundGravity="right"
            android:layout_height="36dp"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:src="@drawable/ic_done_boxer_blue"/>
            </LinearLayout>

</LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tietDesc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingStart="3dp"
                android:hint="@string/description"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="3dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/due_date"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_calendar_light"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tIetDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:editable="false"
                android:focusable="false"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                android:hint="@string/due_date"
                android:textColorHint="#dadada"
                android:layout_margin="0dp"
                android:maxLines="1"
                android:paddingEnd="5dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:background="#dadada"
            android:layout_marginLeft="55dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/due_date"
            android:layout_gravity="center_vertical|start"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_repeat"
            android:layout_marginLeft="10dp" />
<!--
        <LinearLayout
            android:id="@+id/repeatSpinnerLayout"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/transparent_button"
            android:layout_height="45dp"
            android:visibility="gone"
            android:layout_marginRight="5dp">

        <Spinner
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"
            android:id="@+id/repeat_spinner" />

            </LinearLayout>-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tIetRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:editable="false"
                android:focusable="false"
                android:paddingTop="5dp"
                android:background="@color/white"
                android:hint="@string/repeat"
                android:textColorHint="#dadada"
                android:layout_margin="0dp"
                android:maxLines="1"
                android:paddingEnd="0dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="0dp"
            android:background="#dadada"
            android:layout_marginLeft="55dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/due_date"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:src="@drawable/ic_cash_multiple"/>

<!--        <TextView
            android:id="@+id/tvCurrencySym"
            android:textColor="@color/my_gray"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="-10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="-10dp" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tIetAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:hint="@string/amount"
                android:background="@color/white"
                android:textColorHint="#dadada"
                android:layout_margin="0dp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingEnd="5dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:background="#dadada"
            android:layout_marginLeft="55dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/due_date"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_description_black_24dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tIetMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingTop="5dp"
                android:hint="@string/memo"
                android:background="@color/white"
                android:textColorHint="#dadada"
                android:layout_margin="0dp"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="0dp" />

        </android.support.design.widget.TextInputLayout>


</LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="5dp"
            android:background="#dadada"
            android:layout_marginLeft="55dp" />


    </LinearLayout>
    </ScrollView>
    <LinearLayout
    android:id="@+id/banner_AdView"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"/>
</LinearLayout>